tests/paczka1/small_fuzzy/13003382.err
Error in line 1: dEaZ6EC S834 64,6
Error in line 3: kx0aHiay A827 1,0
Error in line 2: S794 S794 88,1
Error in line 15: 8rwEbMp S834 59,3
